--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <h2 class="text-center">{{title}}</h2>
+      <h2 class="text-center">{{title}} is the title</h2>
     </div>
   </div>
 </div>
