--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,5 @@
-<h1 *ngIf="httpService.user | async">Welcome {{ (httpService.user | async)?.email }}!</h1>
-
+<div class="col-xs-12">
+  <h1 *ngIf="httpService.user | async">Welcome {{ (httpService.user | async)?.email }}!</h1>
+  <router-outlet></router-outlet>
+  <!-- <app-history></app-history> -->
+</div>
