--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,5 +1,53 @@
-<input type="text" [(ngModel)]="email" placeholder="email">
-<input type="password" [(ngModel)]="password" placeholder="password">
-<button (click)="signup()" [disabled]="!email || !password">
-  Signup
-</button>
+<div class="row m-top justify-content-center">
+    <div class="col-12 col-md-6">
+      <form #f="ngForm">
+        <div class="form-group">
+          <div class="text-center mb-5">
+            <h3>Sign Up</h3>
+          </div>
+          <input type="email" 
+                  class="form-control" 
+                  id="exampleInputEmail1" 
+                  aria-describedby="emailHelp" 
+                  placeholder="Enter email"
+                  [(ngModel)]="email"
+                  #emailInput="ngModel"
+                  name="email"
+                  required>
+          <div *ngIf="emailInput.invalid && (emailInput.dirty || emailInput.touched)" class="alert alert-danger">
+            <div *ngIf="emailInput.errors.required">
+              Email is required.
+            </div>
+          </div>
+        </div>
+        
+        <div class="form-group">
+          <input type="password" 
+                    class="form-control" 
+                    id="exampleInputPassword1" 
+                    placeholder="Password"
+                    [(ngModel)]="password"
+                    minlength="6"
+                    #passwordInput="ngModel"
+                    name="password"
+                    required>
+          <div *ngIf="passwordInput.invalid && (passwordInput.dirty || passwordInput.touched)" class="alert alert-danger">
+            <div *ngIf="passwordInput.errors.required">
+              Password is required.
+            </div>
+            <div *ngIf="passwordInput.errors.minlength">
+              Password must be at least 6 characters long.
+            </div>
+          </div>
+        </div>
+
+      <div class="mt-3 mb-3">
+          <a routerLink="/signin">Have an account? Sign in</a>
+      </div>
+      
+      <button class="btn btn-primary" 
+              (click)="signup(); f.reset()" 
+              [disabled]="!email || !password">Sign Up</button>
+    </form>
+  </div>
+</div>
