--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,21 @@
 <nav class="navbar  bg-dark navbar-dark">
   <a class="navbar-brand text-white" routerLink="/home" >
-    <div *ngIf="httpService.isLoggedIn()">{{ (httpService.user | async)?.email.split('@')[0] }}</div>
+    <div *ngIf="isLoggedIn()">{{ (getUser() | async)?.email.split('@')[0] }}</div>
   </a>
   <ul class="navbar-nav collapse ">
-    <li class="nav-item" *ngIf="!httpService.isLoggedIn()">
+    <li class="nav-item" *ngIf="!isLoggedIn()">
       <a class="nav-link" 
          role="button" 
          routerLink="/signin" 
          routerLinkActive="active" >Sign In</a>
     </li>
-    <!-- <li class="nav-item" *ngIf="!httpService.loggedIn">
+    <!-- <li class="nav-item" *ngIf="!isLoggedIn()">
       <a class="nav-link" 
          role="button" 
          routerLink="/signup" 
          routerLinkActive="active" >Sign Up</a>
     </li> -->
-    <div *ngIf="httpService.isLoggedIn()">
+    <div *ngIf="isLoggedIn()">
       <li>
         <!-- Example single danger button -->
         <!-- <div class="">
