--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="col-xs-12">
-  <h1 *ngIf="httpService.user | async">Welcome {{ (httpService.user | async)?.email }}!</h1>
+  <h1 *ngIf="getUser() | async">Welcome {{ (getUser() | async)?.email }}!</h1>
   <router-outlet></router-outlet>
   <!-- <app-history></app-history> -->
 </div>
