--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -14,7 +14,9 @@
                 #emailInput="ngModel"
                 name="email"
                 required>
-        <div *ngIf="emailInput.invalid && (emailInput.dirty || emailInput.touched)" class="alert alert-danger">
+        <div *ngIf="emailInput.invalid && (emailInput.dirty || emailInput.touched)" 
+             class="alert alert-danger"
+             style="padding: .35rem 1.25rem;">
           <div *ngIf="emailInput.errors.required">
             Email is required.
           </div>
@@ -32,7 +34,8 @@
                   name="password"
                   required>
         <div *ngIf="passwordInput.invalid && (passwordInput.dirty || passwordInput.touched)" 
-              class="alert alert-danger">
+              class="alert alert-danger"
+              style="padding: .35rem 1.25rem;">
           <div *ngIf="passwordInput.errors.required">
             Password is required.
           </div>
